[package]
name = "catch-em"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
rand = "0.8"
bevy_rapier3d = "0.22.0"
bevy_fps_controller = "0.2.2"
bytes = "1"
serde = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_cbor = "0.10"
queues = "1.0.2"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3